--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -21,6 +21,45 @@ body {
 button, input, select, textarea {
     font-family: 'Poppins', sans-serif;
 }
+.primary-button {
+    background: @pink;
+    border: 0;
+    border-radius: 8px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 8px 35px;
+}
+
+.secondary-button {
+    background: white;
+    border: 1px solid black;
+    border-radius: 8px;
+    color: black;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 8px 35px;   
+}
+
+input[type="text"] {
+    height: 47px;
+    border-radius: 8px;
+    border: 1px solid @dark-grey;
+    color: @dark-grey;
+    padding: 0 15px;
+
+    &.error {
+        border: 1px solid @error-color;
+
+        &::placeholder {
+            color: @error-color;
+        }
+    }
+}
+textarea {
+    padding: 15px;
+}
+
 @media @smartphones {
     body {
         background: white;
